# flops

./: .gitignore  Makefile  README.md  README_CN.md  flops.c  flops.go  flops.py  run_all_benchmarks.py  test_flops.py
benchmark/: .gitignore  README.md  dhrystone.c  dhrystone.py  fft_bench.c  fft_bench.py  nbody.c  nbody.py  stream.c  stream.py
flops_rs/: Cargo.toml
flops_rs/src/: main.rs
