[package]
name = "flops"
version = "3.0.0"
edition = "2021"
description = "Floating-point MFLOPS benchmark — modernized Rust edition with rayon parallelism"
authors = ["CycleUser"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
